<resources>
    <string name="app_name">Food Recipes Demo Kotlin</string>
    <string name="loading_text">Loading</string>
    <string name="search">Search</string>
    <string name="search_hint">Broccoli&#8230;</string>
    <string name="categories">Categories</string>
    <string name="score">Score</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="ingredients">Ingredient list</string>
    <string name="social_score">Score</string>
    <string name="publisher">Publisher</string>
    <string name="ingredients_bullet">- %s</string>
    <string name="searching_text">Searching</string>
    <string name="no_results">No results found for %s.\nTry searching again with other terms.</string>
    <string name="no_more_results">No more results…</string>

    <!--    Categories-->
    <string name="steak">"Steak"</string>
    <string name="breakfast">Breakfast</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="brunch">Brunch</string>
    <string name="soup">Soup</string>
    <string name="wine">Wine</string>
    <string name="italian">Italian</string>
    <string name="vegan">Vegan</string>

    <string name="ingredient">- %s</string>
    <string name="make_recipe_favorite">Make recipe favorite</string>
    <string name="share_this_recipe">Share this recipe</string>
    <string name="check_this_recipe">Check this recipe:</string>
    <string name="close_recipe">Close recipe</string>
    <string name="missing_ingredients_list">Error retrieving ingredients.
        \nCheck network connection.</string>

</resources>
