<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/recipe_detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/recipe_detail_motion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/recipe_detail_top_bar_size"
            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
            app:layoutDescription="@xml/recipe_details_anim">

            <ImageView
                android:id="@+id/recipe_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_image_height"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/vegan" />
<!--            <View-->
<!--                android:id="@+id/recipe_detail_title_view_background"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:alpha="0.25"-->
<!--                android:background="@drawable/gradient"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/recipe_detail_title"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/recipe_detail_image" />-->

            <TextView
                android:id="@+id/recipe_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/primaryColor"
                android:background="@drawable/gradient"
                android:textSize="@dimen/recipe_title_text_size"
                android:textStyle="bold|italic"
                tools:text="Recipe Title"/>

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/recipe_publisher_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/publisher"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/recipe_publisher_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/social_score_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipe_detail_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/recipe_publisher_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/social_score_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_publisher_label"
                tools:text="Recipe Publisher" />

            <TextView
                android:id="@+id/ingredients_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/ingredients"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/recipe_publisher_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/recipe_detail_publisher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_publisher" />


            <androidx.cardview.widget.CardView
                android:id="@+id/social_score_layout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/ingredients_card_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/recipe_publisher_label">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/recipe_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/social_score"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recipe_detail_social_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="100" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/ingredients_card_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredients_label"
                app:layout_constraintTop_toBottomOf="@id/ingredients_label">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/primaryColor" />

                <LinearLayout
                    android:id="@+id/ingredients_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:elevation="4dp">

        <RelativeLayout
            android:id="@+id/recipe_detail_top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_detail_top_bar_size"
            android:alpha="0.15"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/recipe_detail_favorite_icon"
            style="@style/recipe_detail_icon_bar"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/make_recipe_favorite"
            android:src="@drawable/ic_not_favorite"
            app:layout_constraintBottom_toBottomOf="@id/recipe_detail_top_bar_layout"
            app:layout_constraintEnd_toStartOf="@id/recipe_detail_share_icon"
            app:layout_constraintTop_toTopOf="@id/recipe_detail_top_bar_layout" />

        <ImageView
            android:id="@+id/recipe_detail_share_icon"
            style="@style/recipe_detail_icon_bar"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/share_this_recipe"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/recipe_detail_top_bar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/recipe_detail_top_bar_layout" />

        <ImageView
            android:id="@+id/recipe_detail_close_icon"
            style="@style/recipe_detail_icon_bar"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/close_recipe"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/recipe_detail_top_bar_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recipe_detail_top_bar_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>